manifests/qbittorrent/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: jovian-prod
spec:
  selector:
    app: qbittorrent
  ports:
    - port: 8080
      targetPort: qbitt-http
      protocol: TCP
      name: qbitt-http
